--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shorten Microservice",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/shortenControllerTest.js",
     "start": "node server.js"
   },
   "keywords": [
